--- a/insurance/templates/calc/step4.html
+++ b/insurance/templates/calc/step4.html
@@ -117,6 +117,8 @@
         </table>
 
         <div id="citizenship">
+            <a class="active" href="#">Гражданин РФ</a>
+            <a href="#">Иностранный гражданин</a>
             {{ form.citizenship }}
         </div>
 
