поправка для отображения пола

--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2669,6 +2669,12 @@ div.messages li {
     font-size: 25px;
 }
 
+#person-info-table #sex-label{
+    display: block;
+    float: left;
+    padding-top: 10px;
+}
+
 #person-info-table #woman-sex{
     display: block;
     float: left;
