--- a/insurance/templates/calc/step4.html
+++ b/insurance/templates/calc/step4.html
@@ -108,7 +108,7 @@
                     {{ form.category }}
                 </td>
                 <td>
-                    <span>Пол:</span>
+                    <span id="sex-label">Пол:</span>
                     <a id="woman-sex" class="active" href="#"></a>
                     <a id="man-sex" href="#"></a>
                     {{ form.sex }}
