--- a/insurance/templates/calc/step4.html
+++ b/insurance/templates/calc/step4.html
@@ -231,11 +231,16 @@
         <div id="tech-auto-data2">
             <div>
                 <h5>Коробка передач:</h5>
+                <a href="#">Механическая</a>
+                <a href="#" class="active">Автомат</a>
                 {{ form.kpp }}
             </div>
 
             <div>
                 <h5>Двигатель:</h5>
+                <a href="#">Бензиновый</a>
+                <a href="#" class="active">Дизельный</a>
+                <a href="#">Гибридный</a>
                 {{ form.motor }}
             </div>
         </div>
