черновой вариант страницы полисов.

--- a/insurance/apps/profile/templates/profile/userprofile_policylist.html
+++ b/insurance/apps/profile/templates/profile/userprofile_policylist.html
@@ -1,6 +1,6 @@
-{% extends "profile/userprofile_base.html" %}
+{% extends "base.html" %}
 
-{% block inner_content %}
+{% block content %}
 
 <div id="policy-navigation">
   <ul>
