--- a/insurance/apps/profile/templates/profile/userprofile_base.html
+++ b/insurance/apps/profile/templates/profile/userprofile_base.html
@@ -5,7 +5,7 @@
   <div class="tabs_box">
     <ul class="tabs">
       <li><a class="active" href="{% url userprofile_edit %}">МОИ ДАННЫЕ</a></li>
-      <li><a href="#">МОИ ПОЛИСЫ</a></li>
+      <li><a href="{% url userprofile_policylist %}">МОИ ПОЛИСЫ</a></li>
       <li><a href="{% url notification_notices %}">УВЕДОМЛЕНИЯ {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
       <li><a href="#">FAQ</a></li>
     </ul>
