комментарий для замены инптуа

--- a/insurance/templates/calc/step4.html
+++ b/insurance/templates/calc/step4.html
@@ -194,7 +194,9 @@
             <tr>
                 <td>
                     <h5>Номер кузова:</h5>
+                    <!-- Этот инпут заменить на настоящий -->
                     <input type="text" value="" />
+                    <!-- Этот инпут заменить на настоящий -->
                 </td>
                 <td>
                     <h5>Серия и номер ПТС:</h5>
@@ -283,6 +285,10 @@
 
     <!-- third tab-->
     <div id="inner-tab3">
+        <h5>Укажите максимально подробно адрес и условия доставки:</h5>
+
+        
+
         <p>
             {{ form.date.label }}
             {{ form.date }}
