--- a/insurance/templates/calc/step4.html
+++ b/insurance/templates/calc/step4.html
@@ -317,7 +317,7 @@
                 </td>
             </tr>
         </table>
-        <input type="image" src="/static/images/order_button_step3.png" value="Заказать"/>
+        <input id="order-button" type="image" src="/static/images/order_button_step3.png" value="Заказать"/>
 
         <h5>Обратите внимание! Доставка курьером осуществляется только в пределах МКАД.</h5>
     </div>
