--- a/insurance/templates/calc/step4.html
+++ b/insurance/templates/calc/step4.html
@@ -39,7 +39,7 @@
     </ul>
 
     <div id="tabs-1">
-    <div class="form-round-block clear-float">
+    <div class="form-round-block no-back">
 
     <div id="step4-tabs">
     <ul>
