селекты на третьем табе спрятаны

--- a/insurance/templates/calc/step4.html
+++ b/insurance/templates/calc/step4.html
@@ -15,6 +15,9 @@
                 $(this).parents("ul").addClass("active-"+$(this).attr("dataid"));
                 
             })
+
+            $("#id_kpp, #id_motor").css("visibility", "hidden");
+
             
             $("#step4-tabs form").validate({
                 messages: {
