--- a/insurance/templates/calc/step4.html
+++ b/insurance/templates/calc/step4.html
@@ -19,7 +19,7 @@
             $("#id_kpp, #id_motor").css("visibility", "hidden");
 
             
-            $("#step4-tabs form").validate({
+           /* $("#step4-tabs form").validate({
                 messages: {
                     first_name: "Please specify your name",
                     email: {
@@ -27,7 +27,7 @@
                         email: "Your email address must be in the format of name@domain.com"
                     }
                 }
-            });
+            });*/
         });
     </script>
 {% endblock %}
